<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".activities.ConfirmationActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.80"
        android:gravity="center"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="@dimen/size_50"
            android:layout_height="@dimen/size_50"
            app:cardCornerRadius="@dimen/size_10"
            android:elevation="@dimen/size_10">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorPrimary"
                android:padding="@dimen/size_5">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_done_black_24dp"
                    android:tint="@color/white" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_20"
            android:text="@string/order_successful"
            android:fontFamily="@font/betm"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/size_18"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_20"
            android:gravity="center"
            android:fontFamily="@font/betm"
            android:text="@string/tv_confirm1"
            android:textColor="@color/darkgrey"
            android:textSize="@dimen/size_16" />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_20"
            android:gravity="center"
            android:visibility="gone"
            android:background="@color/black"

            android:id="@+id/tv_review"
            android:fontFamily="@font/betm"
            android:text="@string/add_review"
            android:textColor="@color/white"
            android:textSize="@dimen/size_16" />

    </LinearLayout>



    <Button
        android:id="@+id/confirm_payment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        android:background="@color/colorPrimary"
        android:text="@string/title_continue"
        android:textAllCaps="false"
        android:fontFamily="@font/betm"
        android:textColor="@color/white"
        android:textSize="@dimen/size_16" />


</LinearLayout>