<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.MyOrderFragment">



    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_myorder"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_46"
        app:navigationIcon="@drawable/ic_arrow_back"
        android:background="@color/colorappbar"
        >

        <TextView
            android:id="@+id/icon_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:textSize="@dimen/size_16"
            android:fontFamily="@font/betm"
            android:background="@color/colorappbar"
            android:textColor="@color/white"
            android:text="@string/tv_myorder" />

    </androidx.appcompat.widget.Toolbar>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_below="@+id/toolbar_myorder"
        android:id="@+id/rv_myorder"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_order"
        android:visibility="gone"
        android:id="@+id/no_order"
        android:layout_centerInParent="true">

    </TextView>
    <LinearLayout
        android:layout_below="@+id/toolbar_myorder"
        android:visibility="gone"
        android:id="@+id/nodata_myorder"
        android:gravity="center"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:textColor="@color/darkgrey"
            android:textSize="@dimen/size_18"
            android:layout_width="match_parent"
            android:text="@string/no_data_found"
            android:fontFamily="@font/betm"
            android:gravity="center"
            android:layout_height="wrap_content" />

    </LinearLayout>






</RelativeLayout>